force-app/main/default/objects/PS_SubTask__c/PS_SubTask__c.object-meta.xml
<CustomObject>
    <description>Object to capture Subtask related to PS Task under PS Project</description>
    <label>Legacy PS SubTask</label>
    <nameField>
        <displayFormat>SUBTASK-{0000000}</displayFormat>
        <label>PS SubTask ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Legacy PS SubTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>