force-app/main/default/objects/PS_SubTask__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Task__r.Project__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Name from related PS Project</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>