force-app/main/default/objects/PS_SubTask__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggling this will make the subtask non-billable. If the task is created as billable, all of these automatically created subtasks should inherit from the parent task</description>
    <inlineHelpText>Toggling this will make the subtask non-billable. If the task is created as billable, all of these automatically created subtasks should inherit from the parent task</inlineHelpText>
    <label>Billable (to be deprecated)</label>
    <type>Checkbox</type>
</CustomField>