force-app/main/default/objects/PS_SubTask__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Any additional comments for subtask</description>
    <inlineHelpText>Any additional comments for subtask</inlineHelpText>
    <label>Comment</label>
    <length>100768</length>
    <type>LongTextArea</type>
</CustomField>