force-app/main/default/objects/PS_SubTask__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSAT</label>
    <type>Checkbox</type>
</CustomField>