force-app/main/default/objects/PS_SubTask__c/fields/Hours_logged__c.field-meta.xml
<CustomField>
    <fullName>Hours_logged__c</fullName>
    <inlineHelpText>Should be in the unit of hours. 1 day = 8 hours</inlineHelpText>
    <label># of hours logged(Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>