force-app/main/default/objects/PS_SubTask__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <formula>If(Task__r.Project__r.CSAT__c == false 
&amp;&amp; 
!CONTAINS(TEXT(Subtask_Type__c),&apos;Non billable&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Billable?</label>
    <type>Checkbox</type>
</CustomField>