force-app/main/default/objects/PS_SubTask__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>CASESAFEID(Task__r.Project__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>