force-app/main/default/objects/PS_SubTask__c/fields/PS_Assignee__c.field-meta.xml
<CustomField>
    <fullName>PS_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assignee for the PS Subtask</description>
    <inlineHelpText>The assignee for the PS Subtask</inlineHelpText>
    <label>PS Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>