force-app/main/default/objects/PS_SubTask__c/fields/Reason_Billable_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Billable_Status_Changed__c</fullName>
    <description>A subtask can be billable or non-billable. These distinctions are set as defaults on the subtask. When a subtask&apos;s billable, however this specific subtask is not, we would like a rationale for why that is.</description>
    <inlineHelpText>A subtask can be billable or non-billable. These distinctions are set as defaults on the subtask. When a subtask&apos;s billable, however this specific subtask is not, we would like a rationale for why that is.</inlineHelpText>
    <label>Reason Billable Status Changed</label>
    <type>TextArea</type>
</CustomField>