force-app/main/default/objects/PS_SubTask__c/fields/Reason_Utilization_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Utilization_Status_Changed__c</fullName>
    <description>A subtask can be included in utilization or not included in utilization. These distinctions are set as defaults on the subtask. When a subtask&apos;s default nature is to be included in utilization, however this specific subtask is not, we would like a rationale for why that is.</description>
    <inlineHelpText>A subtask can be included in utilization or not included in utilization. These distinctions are set as defaults on the subtask. When a subtask&apos;s default nature is to be included in utilization, however this specific subtask is not, we would like a rationa</inlineHelpText>
    <label>Reason Utilization Status Changed</label>
    <type>TextArea</type>
</CustomField>