force-app/main/default/objects/PS_SubTask__c/fields/Subtask_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subtask_End_Date__c</fullName>
    <description>End Date for Subtask</description>
    <label>Subtask End Date</label>
    <type>Date</type>
</CustomField>