force-app/main/default/objects/PS_SubTask__c/fields/Subtask_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subtask_Start_Date__c</fullName>
    <description>Start Date for Subtask</description>
    <label>Subtask Start Date</label>
    <type>Date</type>
</CustomField>