force-app/main/default/objects/PS_SubTask__c/fields/Subtask_Type__c.field-meta.xml
<CustomField>
    <fullName>Subtask_Type__c</fullName>
    <inlineHelpText>Select subtask Type:
For Install Task: 
Install

For Consult Task: 
Advanced Configuration
Automation
Deep-Dive Training
Onsite Resident
Documentation

For Admin Task: 
Travel
Training
PTO
CS</inlineHelpText>
    <label>Subtask Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Advanced Configuration</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Deep-Dive Training</fullName>
            </value>
            <value>
                <fullName>Onsite Resident</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Shadow</fullName>
            </value>
            <value>
                <fullName>Break/fix</fullName>
            </value>
            <value>
                <fullName>Partner Enablement</fullName>
            </value>
            <value>
                <fullName>Consult (Non billable)</fullName>
            </value>
            <value>
                <fullName>Install (Non billable)</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>