force-app/main/default/objects/PS_SubTask__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>PS Task related to this Subtask</description>
    <inlineHelpText>Select PS Task related to this Subtask</inlineHelpText>
    <label>Task</label>
    <referenceTo>PS_Task__c</referenceTo>
    <relationshipLabel>PS Subtasks</relationshipLabel>
    <relationshipName>PS_Subtasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>