force-app/main/default/objects/PS_SubTask__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>